Fixed bug #21228 (broken check for ob_gzhandler). Fixed a bug that made ob_start return incorrect return value.

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@109467 c90b9560-bf6c-de11-be94-00142212c4b1